<resources>
    <string name="app_name">LynxTestApp</string>

    <!-- Titles-->
    <string name="title_football">Новости футбола</string>
    <string name="title_hockey">Новости хоккея</string>
    <string name="title_tennis">Новости тенниса</string>
    <string name="title_basketball">Новости баскетбола</string>
    <string name="title_volleyball">Новости воллейбола</string>

    <!-- Menu-->
    <string name="menu_football">Футбол</string>
    <string name="menu_hockey">Хоккей</string>
    <string name="menu_tennis">Теннис</string>
    <string name="menu_basketball">Баскетбол</string>
    <string name="menu_volleyball">Воллейбол</string>

    <!-- Retrofit parameters-->
    <string name="retrofit_football">football</string>
    <string name="retrofit_hockey">hockey</string>
    <string name="retrofit_tennis">tennis</string>
    <string name="retrofit_basketball">basketball</string>
    <string name="retrofit_volleyball">volleyball</string>

    <string name="title_activity_detail_news">Подробности</string>
    <string name="prediction_title">Прогноз</string>
    <string name="check_internet_connection">Нет подключения к интернету</string>
    <string name="hyphen">-</string>
</resources>
